# sys-voice

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
android-example/: .gitignore  Cargo.toml  README.md  build.sh  gradle.properties  settings.gradle.kts
android-example/.cargo/: config.toml
android-example/app/: build.gradle.kts
android-example/src/: lib.rs
examples/: aec_test.rs
flutter-example/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter-example/android/app/: build.gradle.kts
flutter-example/integration_test/: simple_test.dart
flutter-example/ios/Runner/: Info.plist
flutter-example/ios/Runner.xcodeproj/: project.pbxproj
flutter-example/lib/: main.dart
flutter-example/linux/: CMakeLists.txt
flutter-example/linux/runner/: my_application.cc
flutter-example/macos/Runner.xcodeproj/: project.pbxproj
flutter-example/rust/: Cargo.toml
flutter-example/rust/src/: frb_generated.rs
flutter-example/rust_builder/: pubspec.yaml
flutter-example/rust_builder/android/: build.gradle  settings.gradle
flutter-example/rust_builder/ios/: rust_lib_voice_capture_example.podspec
flutter-example/rust_builder/linux/: CMakeLists.txt
flutter-example/rust_builder/macos/: rust_lib_voice_capture_example.podspec
flutter-example/test/: widget_test.dart
flutter-example/windows/: CMakeLists.txt
ios-example/: Cargo.toml  README.md  build.sh
ios-example/src/: lib.rs
src/: lib.rs  resampler.rs
src/backends/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration.rs
(+19 files in other folders)
